# pyProject1

./: pyproject.toml
web/: db.sqlite3
web/chat/: consumers.py  rabbitmq.py  urls.py  views.py
web/chat/static/: chat.css
web/chat/templates/: room.html
web/main/templates/main/: about.html  index.html  layout.html  test.html
web/staticfiles/: chat.css
web/users/: urls.py  views.py
web/users/migrations/: 0001_initial.py
web/web/: asgi.py  routing.py  settings.py  urls.py
