[tool.poetry]
name = "pyproject1"
version = "0.1.0"
description = ""
authors = ["Narek"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
flake8 = "^6.1.0"
psycopg2 = "^2.9.7"
gunicorn = "^21.2.0"
django-registration = "^3.4"
channels = "3.0.3"
channels-redis = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
